fix: :bug: change description rendering to preserve, wrap

--- a/Views/Event/_EventDetailCard.cshtml.css
+++ b/Views/Event/_EventDetailCard.cshtml.css
@@ -63,3 +63,7 @@
   display: flex;
   align-items: center;
 }
+
+.description {
+  white-space: pre-wrap;
+}
